# artificial-teacher

./: .gitignore  Makefile  README.md  alembic.ini  pyproject.toml
src/: config.py  database.py  main.py
src/core/: config.py  database.py  providers.py
src/handlers/: assistant.py  language.py  start.py
src/keyboards/: language.py
src/migrations/: env.py
src/migrations/versions/: 2025_09_23_2000-ba37c11b952e_add_user_model.py  2025_10_09_2049-312ee7d2cff2_add_user_model.py  2025_10_11_1136-dc84df0db31a_update_base_and_user_models.py  2025_10_30_1214-209d681ce879_add_language_fields_to_user_model.py  2025_10_31_1400-b4f5302bda83_change_language_field_length_in_user_.py  2025_11_06_2234-40c6ff79ca20_change_language_field_length_in_user_.py
src/models/: base.py  user.py
src/repositories/: base.py  user.py
src/schemas/: user.py
src/services/: __init__.py  assistant.py  context.py  language.py  start.py
src/texts/: messages.py  prompts.py
src/utils/: logger.py
tests/: conftest.py
tests/unit/keyboards/: test_keyboards.py
tests/unit/models/: test_models.py
tests/unit/repositories/: test_base.py  test_user.py
tests/unit/schemas/: test_schemas.py
tests/unit/services/: test_context.py  test_language.py  test_start.py
