[project]
name = "linguai-pro"
version = "0.1.0"
description = "..."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.22.0",
    "alembic>=1.16.5",
    "asyncpg>=0.30.0",
    "pydantic>=2.11.9",
    "pyyaml>=6.0.2",
    "sqlalchemy[asyncio]>=2.0.43",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "ruff>=0.13.1",
    "types-pyyaml>=6.0.12.20250915",
]


[tool.ruff]
line-length = 120
target-version = "py313"
exclude = [
    "src/migrations/",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort (import sorting)
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "D",    # pydocstyle
    "ANN",  # flake8-annotations
    "T20",  # flake8-print (print statements)
    "PT",   # flake8-pytest-style
    "SIM",  # flake8-simplify
    "ARG",  # flake8-unused-arguments
    "RUF",  # ruff-specific rules
    "TD",   # flake8-todo
    "FAST", # flake8-fastapi
    "ASYNC",# flake8-async
    "S",    # flake8-bandit (security)
    "BLE",  # flake8-blind-except
    "COM",  # flake8-commas
    "PIE",  # flake8-pie
    "RSE",  # flake8-raise
    "TID252", # flake8-tidy-imports
    "N",    # pep8-naming
    "PLR",  # pylint refactor rules
    "FURB", # flake8-refurb
    "TRY"   # flake8-try
]

ignore = [
    "D100",    # missing docstring in public module
    "D104",    # missing docstring in public package
    "D107",    # missing docstring in __init__
    "RUF001",  # ruff-specific rule
    "RUF002",  # ruff-specific rule
    "RUF003",  # ruff-specific rule
    "S104",    # hardcoded bind all interfaces
    "COM812"   # specific combination rule
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # allow unused imports in __init__.py

[tool.ruff.lint.flake8-annotations]
mypy-init-return = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.13"
strict = true
explicit_package_bases = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["sqlalchemy.*", "aiogram.*", "alembic.*"]
ignore_errors = true
